# Snatch

./: .gitignore  Dockerfile  driver.py  pyproject.toml  requirements.txt  run_scraping.py  scrape.py  tor.py  utils.py
snatch/: __init__.py  cli.py  config.py  driver.py  run_scraping.py  scrape.py  utils.py
snatch.egg-info/: PKG-INFO  SOURCES.txt
