[tool.poetry]
name = "Snatch"
version = "0.0.1"
description = "Scrape websites without worrying about ip blocking and proxy management."
authors = ["Pritam Dey <pritam.pritamdey.984@gmail.com>"]
packages = [{include = "snatch"}]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.0.0"
pyvirtualdisplay = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel"]
build-backend = "poetry.core.masonry.api"